# chandocar-server-side

./: .env-example  .gitignore  Cargo.toml  db.sql
crates/account-login/: Cargo.toml
crates/account-login/src/: lib.rs
crates/account-login/src/verifiers/: fake.rs  mod.rs  moodle.rs
crates/database-access/: Cargo.toml  DOCS.md
crates/database-access/src/: lib.rs
crates/database-access/src/entities/: example.rs  mod.rs
crates/server-side/: Cargo.toml  DOCS.md
crates/server-side/src/: main.rs
crates/server-side/src/config/: mod.rs
crates/server-side/src/controllers/: example.rs  mod.rs
crates/server-side/src/test_utils/: mod.rs
