[package]
name = "server-side"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0" }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135" }
dotenvy = "0.15.7"

### Local dependencies
database-access = { path = "../database-access" }
account-login = { path = "../account-login" }
